# Locations-and-regions-display

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: Plugin.h.in  common.cmake  version.rc.in
data/Data/F4SE/Plugins/: DynamicLocationPopupsF4.toml
scripts/: addrlib.py  disasm_setvalue.py  find_singleton.py  trace_vignette.py  xref_hdt_location.py
src/: Areas.h  CMakeLists.txt  PCH.h  RE.h  Settings.h  main.cpp
